--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/lodash": "^4.14.186",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-use": "^17.3.2",
+    "recoil": "^0.7.5",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
